--- a/index.html
+++ b/index.html
@@ -4,5 +4,13 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <! My Content -->
+    <p>Falalalalalalalaalalalalalalalalala,hahahaa!!</p>
+    <h2>My bulleted list: Characteristics</h2>
+    <ul>
+      <li>Funny</li>
+      <li>Smart</li>
+      <li>Crazy</li>
+    </ul>
   </body>
 </html>
