--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Hello World!</title>
-    <link type="text/css" src="http://aoizuogu.github.io/style.css"/>
+    <link type="text/css" href="http://aoizuogu.github.io/style.css"/>
   </head>
   <body>
     <h1>Hello World!</h1>
